--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "cors": "^2.8.5"
+    "mongodb": "^3.5.9"
   },
   "engines": {
     "node": "8.x"
